--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
             text-decoration: none;
             color: #454545;
         }
-        body {
+        #b {
             background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT49D6wHelRD317-h7YXHdUGgUN2ifIjy8b4Q:https://cdn.onlinewebfonts.com/svg/download_69492.svg&usqp=CAU);
             color: rgb(0, 191, 255);
             padding: 10px;
@@ -62,7 +62,7 @@
             display: inline-block;
             padding: 0 10px;
         }
-        a {
+        #a {
             text-decoration: none;
             color: blue;
         }
@@ -117,7 +117,7 @@
             display: inline-block;
             padding: 0 10px;
         }
-        a {
+        #a {
             text-decoration: blueviolet;
             color: #fbff00;
             font-size: large;
